add reacher rate limiter env vars

--- a/.env.master.prod
+++ b/.env.master.prod
@@ -87,7 +87,8 @@ REACHER_HOTMAIL_USE_HEADLESS = true
 # REACHER_MICROSOFT365_USE_API =
 REACHER_GMAIL_USE_API = true
 # REACHER_YAHOO_USE_API =
-REACHER_REQUESTS_PER_MINUTE = 60
+REACHER_RATE_LIMITER_REQUESTS = 60
+REACHER_RATE_LIMITER_INTERVAL = 60 * 1000
 
 # Mailercheck:  https://developers.mailercheck.com/
 MAILERCHECK_API_KEY =
