add reacher throttle requests (#2014)

--- a/.env.master.dev
+++ b/.env.master.dev
@@ -72,7 +72,7 @@ LOAD_BALANCE_VERIFIERS = false # true to load balance between multiple email ver
 
 # Reacher: https://help.reacher.email/
 REACHER_HOST = https://stoplight.io/mocks/reacher/backend/68673 # ( REQUIRED )
-# REACHER_API_KEY =
+REACHER_API_KEY = 'test-key'
 # REACHER_HEADER_SECRET =
 # REACHER_SMTP_FROM =
 # REACHER_SMTP_HELLO =
@@ -87,7 +87,8 @@ REACHER_HOTMAIL_USE_HEADLESS =true
 # REACHER_MICROSOFT365_USE_API =
 REACHER_GMAIL_USE_API =true
 # REACHER_YAHOO_USE_API =
-
+REACHER_RATE_LIMITER_REQUESTS = 60
+REACHER_RATE_LIMITER_INTERVAL = 60 * 1000
 # Mailercheck: https://developers.mailercheck.com/
 # MAILERCHECK_API_KEY =
 # Zerobounce:  https://www.zerobounce.net/docs/email-validation-api-quickstart/
