fix reacher requests interval

--- a/.env.master.prod
+++ b/.env.master.prod
@@ -88,7 +88,7 @@ REACHER_HOTMAIL_USE_HEADLESS = true
 REACHER_GMAIL_USE_API = true
 # REACHER_YAHOO_USE_API =
 REACHER_RATE_LIMITER_REQUESTS = 60
-REACHER_RATE_LIMITER_INTERVAL = 60 * 1000
+REACHER_RATE_LIMITER_INTERVAL = 60000 # 1 minute
 
 # Mailercheck:  https://developers.mailercheck.com/
 MAILERCHECK_API_KEY =
