--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "imap": "^0.8.19",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
+    "leadminer": "file:..",
     "nanoid": "^3.3.8",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
