--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "author": "ankaboot",
   "license": "AGPL-3.0",
   "devDependencies": {
-    "supabase": "^2.2.1"
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "supabase": "^2.2.1",
+    "ts-jest": "^29.2.5"
   }
 }
