--- a/.github/workflows/push-supabase-migrations.yml
+++ b/.github/workflows/push-supabase-migrations.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [main]
     paths:
-      - 'supabase/migrations/**'
+      - "supabase/migrations/**"
   workflow_dispatch:
 
 jobs:
@@ -18,9 +18,9 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.DEPLOY_PAT }}
         with:
-          source_file: 'supabase/migrations'
-          destination_repo: 'ankaboot-source/leadminer.io'
-          destination_folder: './supabase'
-          user_email: 'deploy@leadminer.io'
-          user_name: 'deploy-bot'
-          commit_message: 'Updating supabase migrations'
+          source_file: "supabase/migrations"
+          destination_repo: "ankaboot-source/leadminer.io"
+          destination_folder: "./supabase"
+          user_email: "deploy@leadminer.io"
+          user_name: "deploy-bot"
+          commit_message: "Updating supabase migrations"
