Add ARG CREDITS_PER_CONTACT to frontend Dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,6 +9,7 @@ ARG POSTHOG_API_KEY
 ARG POSTHOG_INSTANCE_ADDRESS
 ARG ENABLE_CREDIT
 ARG EXTERNAL_REFILL_CREDITS_LINK
+ARG CREDITS_PER_CONTACT
 ARG SAAS_SUPABASE_PROJECT_URL
 ARG SAAS_SUPABASE_ANON_KEY
 
