--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,9 @@
     "@ankaboot.io/imap-autoconfig": "^0.1.2",
     "@faker-js/faker": "^9.3.0",
     "@sentry/node": "^8.50.0",
+    "@sentry/tracing": "^7.120.3",
+    "@supabase/supabase-js": "^2.47.14",
+    "@sentry/node": "^8.50.0",
     "@sentry/tracing": "^7.120.2",
     "@supabase/supabase-js": "^2.47.14",
     "axios": "^1.7.9",
