--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@types/js-cookie": "^3.0.6",
     "@vite-pwa/nuxt": "^0.10.6",
     "autoprefixer": "^10.4.20",
+    "convert-csv-to-json": "^2.50.0",
     "js-cookie": "^3.0.5",
     "nitropack": "^2.10.4",
     "nuxt": "^3.15.4",
@@ -50,7 +51,9 @@
     "typescript": "^5.7.3",
     "vitest": "^2.1.8",
     "vue": "^3.5.13",
-    "vue-tsc": "^2.2.0",
-    "convert-csv-to-json": "^2.50.0"
+    "vue-tsc": "^2.2.0"
+  },
+  "dependencies": {
+    "@sentry/nuxt": "^9.0.0"
   }
 }
