--- a/.env.master.dev
+++ b/.env.master.dev
@@ -10,6 +10,9 @@ SUPABASE_ANON_KEY =eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZS1k
 POSTHOG_API_KEY =   # ( OPTIONAL ) Posthog api key
 POSTHOG_INSTANCE_ADDRESS =  # ( OPTIONAL ) Posthog instance address
 EXTERNAL_REFILL_CREDITS_LINK =  # ( OPTIONAL ) External link for users to refill credits.
+# https://sentry.io
+SENTRY_DSN = '' # ( OPTIONAL ) Reporting and monitoring
+SENTRY_ENVIRONMENT = 'leadminer-frontend-prod'
 
 # ==============| Backend |============= #
 
@@ -61,6 +64,7 @@ AZURE_SECRET = your_azure_client_secret # ( REQUIRED ) Azure secret
 ## SENTRY DSN ##
 # https://sentry.io
 # SENTRY_DSN =      # ( OPTIONAL ) Sentry DSN for reporting and monitoring
+# SENTRY_ENVIRONMENT = 'leadminer-backend-prod'
 
 ## EMAIL VERIFICATION ##
 #
