prefix sentry variables with _FRONTEND, _BACKEND

--- a/.env.master.prod
+++ b/.env.master.prod
@@ -61,8 +61,8 @@ AZURE_SECRET =     # ( REQUIRED ) Azure secret
 
 ## SENTRY DSN ##
 # https://sentry.io
-SENTRY_DSN = # ( OPTIONAL ) Sentry DSN for reporting and monitoring
-SENTRY_ENVIRONMENT = 'leadminer-backend-qa'
+SENTRY_DSN_FRONTEND = # ( OPTIONAL ) Sentry DSN for reporting and monitoring
+SENTRY_ENVIRONMENT_FRONTEND = 'leadminer-backend-qa'
 
 ## EMAIL VERIFICATION ##
 #
