--- a/.env.master.dev
+++ b/.env.master.dev
@@ -11,8 +11,8 @@ POSTHOG_API_KEY =   # ( OPTIONAL ) Posthog api key
 POSTHOG_INSTANCE_ADDRESS =  # ( OPTIONAL ) Posthog instance address
 EXTERNAL_REFILL_CREDITS_LINK =  # ( OPTIONAL ) External link for users to refill credits.
 # https://sentry.io
-SENTRY_DSN = '' # ( OPTIONAL ) Reporting and monitoring
-SENTRY_ENVIRONMENT = 'leadminer-frontend-prod'
+SENTRY_DSN_FRONTEND = '' # ( OPTIONAL ) Reporting and monitoring
+SENTRY_ENVIRONMENT_FRONTEND = 'leadminer-frontend-prod'
 
 # ==============| Backend |============= #
 
@@ -63,8 +63,8 @@ AZURE_SECRET = your_azure_client_secret # ( REQUIRED ) Azure secret
 
 ## SENTRY DSN ##
 # https://sentry.io
-# SENTRY_DSN =      # ( OPTIONAL ) Sentry DSN for reporting and monitoring
-# SENTRY_ENVIRONMENT = 'leadminer-backend-prod'
+# SENTRY_DSN_BACKEND =      # ( OPTIONAL ) Sentry DSN for reporting and monitoring
+# SENTRY_ENVIRONMENT_BACKEND = 'leadminer-backend-prod'
 
 ## EMAIL VERIFICATION ##
 #
