add sentry vars to docker file

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,6 +12,8 @@ ARG EXTERNAL_REFILL_CREDITS_LINK
 ARG CREDITS_PER_CONTACT
 ARG SAAS_SUPABASE_PROJECT_URL
 ARG SAAS_SUPABASE_ANON_KEY
+ARG SENTRY_DSN_FRONTEND
+ARG SENTRY_ENVIRONMENT_FRONTEND
 
 ENV SERVER_ENDPOINT ${SERVER_ENDPOINT}
 ENV SUPABASE_PROJECT_URL ${SUPABASE_PROJECT_URL}
@@ -25,6 +27,9 @@ ENV EXTERNAL_REFILL_CREDITS_LINK ${EXTERNAL_REFILL_CREDITS_LINK}
 ENV CREDITS_PER_CONTACT ${CREDITS_PER_CONTACT}
 ENV SAAS_SUPABASE_PROJECT_URL ${SAAS_SUPABASE_PROJECT_URL}
 ENV SAAS_SUPABASE_ANON_KEY ${SAAS_SUPABASE_ANON_KEY}
+ENV SENTRY_DSN_FRONTEND ${SENTRY_DSN_FRONTEND}
+ENV SENTRY_ENVIRONMENT_FRONTEND ${SENTRY_ENVIRONMENT_FRONTEND}
+
 
 
 WORKDIR /frontend
