--- a/.env.master.prod
+++ b/.env.master.prod
@@ -10,7 +10,8 @@ SUPABASE_ANON_KEY =               # ( REQUIRED ) Supabase anon key
 POSTHOG_API_KEY =                 # ( OPTIONAL ) Posthog api key
 POSTHOG_INSTANCE_ADDRESS =        # ( OPTIONAL ) Posthog instance address
 EXTERNAL_REFILL_CREDITS_LINK =    # ( OPTIONAL ) External link for users to refill credits.
-
+SENTRY_DSN = ''                   # ( OPTIONAL ) Reporting and monitoring
+SENTRY_ENVIRONMENT = 'leadminer-frontend-qa'
 # ==============| Backend |============= #
 
 APP_NAME  = leadminer
@@ -60,7 +61,8 @@ AZURE_SECRET =     # ( REQUIRED ) Azure secret
 
 ## SENTRY DSN ##
 # https://sentry.io
-SENTRY_DSN = # ( OPTIONAL ) Sentry DSN for reporting and monitoring
+SENTRY_DSN_FRONTEND = # ( OPTIONAL ) Sentry DSN for reporting and monitoring
+SENTRY_ENVIRONMENT_FRONTEND = 'leadminer-backend-qa'
 
 ## EMAIL VERIFICATION ##
 #
