--- a/backend/package.json
+++ b/backend/package.json
@@ -32,9 +32,6 @@
   "dependencies": {
     "@ankaboot.io/imap-autoconfig": "^0.1.2",
     "@faker-js/faker": "^9.4.0",
-    "@sentry/node": "^8.51.0",
-    "@sentry/tracing": "^7.120.3",
-    "@supabase/supabase-js": "^2.48.0",
     "@sentry/node": "^8.50.0",
     "@sentry/tracing": "^7.120.2",
     "@supabase/supabase-js": "^2.47.14",
@@ -51,6 +48,7 @@
     "imap": "^0.8.19",
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
+    "limiter": "^3.0.0",
     "nanoid": "^3.3.8",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
