add partition emails based on  quota & update tests

--- a/.env.master.prod
+++ b/.env.master.prod
@@ -70,7 +70,13 @@ SENTRY_ENVIRONMENT_FRONTEND = 'leadminer-backend-qa'
 # verification services: Reacher, MailerCheck, and ZeroBounce.
 #
 
-LOAD_BALANCE_VERIFIERS = false # true to load balance between multiple email verifiers 
+# Quota is calculated based on rate limits and processing speed.
+# 600 => number of emails can verify in 10 minutes.
+# 5,000 => number of emails can verify in 10 minutes.
+# 3,000,000 => number of emails can verify in 10 minutes
+EMAILS_QUOTA_REACHER  = 5000 
+EMAILS_QUOTA_MAILERCHECK = 600
+EMAILS_QUOTA_ZEROBOUNCE = 3000000
 
 # Reacher: https://help.reacher.email/
 REACHER_HOST = # ( REQUIRED )
