--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
   "license": "AGPL-3.0",
   "devDependencies": {
     "supabase": "^2.2.1"
+  },
+  "dependencies": {
+    "@humanwhocodes/object-schema": "^2.0.3",
+    "eslint": "^9.20.0",
+    "glob": "^11.0.1",
+    "inflight": "^1.0.6",
+    "nuxt": "^3.15.4",
+    "rimraf": "^6.0.1"
   }
 }
