--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,59 @@
 {
-  "name": "leadminer",
+  "name": "leadminer.io",
   "version": "1.0.0",
-  "description": "leadminer",
+  "description": "leadminer.io app",
+  "productName": "leadminer.io",
+  "author": "ankaboot",
   "private": true,
   "scripts": {
-    "install-deps": "npm i && npm run install-deps:backend && npm run install-deps:frontend",
-    "install-deps:backend": "npm i --prefix ./backend",
-    "install-deps:frontend": "npm i --prefix ./frontend",
-    "dev:all": "./run.sh",
-    "dev:generate-env": "bash ./generate_env.sh .env.master.dev",
-    "dev:supabase": "supabase start",
-    "dev:supabase-functions": "supabase functions serve",
-    "dev:frontend": "npm run dev --prefix ./frontend",
-    "dev:backend-api": "npm run dev:api --prefix ./backend",
-    "dev:backend-worker": "npm run dev:worker --prefix ./backend",
-    "dev:backend-email-worker": "npm run dev:email-worker --prefix ./backend",
-    "dev:backend-mock-external-services": "npm run dev:mock-external-services --prefix ./backend"
+    "test": "vitest",
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "prettier": "prettier . --check",
+    "prettier:fix": "prettier . --write"
   },
-  "author": "ankaboot",
-  "license": "AGPL-3.0",
   "devDependencies": {
-    "supabase": "^2.2.1"
+    "@microsoft/fetch-event-source": "^2.0.1",
+    "@nuxt/devtools": "^1.7.0",
+    "@nuxt/eslint": "^0.7.5",
+    "@nuxt/scripts": "^0.9.5",
+    "@nuxt/test-utils": "^3.15.4",
+    "@nuxtjs/i18n": "^9.1.1",
+    "@nuxtjs/supabase": "^1.4.6",
+    "@pinia/nuxt": "^0.9.0",
+    "@primevue/nuxt-module": "^4.2.5",
+    "@primevue/themes": "^4.2.5",
+    "@supabase/supabase-js": "^2.47.14",
+    "@types/js-cookie": "^3.0.6",
+    "@vite-pwa/nuxt": "^0.10.6",
+    "autoprefixer": "^10.4.20",
+    "convert-csv-to-json": "^2.50.0",
+    "js-cookie": "^3.0.5",
+    "nitropack": "^2.10.4",
+    "nuxt": "^3.15.4",
+    "nuxt-mdi": "^2.1.1",
+    "nuxt-security": "^2.1.5",
+    "object-scan": "^19.0.5",
+    "pinia": "^2.3.0",
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.5",
+    "recheck": "^4.4.5",
+    "sass": "^1.83.4",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-primeui": "^0.4.0",
+    "typescript": "^5.7.3",
+    "vitest": "^2.1.8",
+    "vue": "^3.5.13",
+    "vue-tsc": "^2.2.0"
+  },
+  "dependencies": {
+    "@sentry/nuxt": "^9.0.0"
   }
 }
