--- a/.env.master.dev
+++ b/.env.master.dev
@@ -72,7 +72,13 @@ AZURE_SECRET = your_azure_client_secret # ( REQUIRED ) Azure secret
 # verification services: Reacher, MailerCheck, and ZeroBounce.
 #
 
-LOAD_BALANCE_VERIFIERS = false # true to load balance between multiple email verifiers 
+# Quota is calculated based on rate limits and processing speed.
+# 600 => number of emails can verify in 10 minutes.
+# 5,000 => number of emails can verify in 10 minutes.
+# 3,000,000 => number of emails can verify in 10 minutes
+EMAILS_QUOTA_REACHER  = 600 
+EMAILS_QUOTA_MAILERCHECK = 600
+EMAILS_QUOTA_ZEROBOUNCE = 3000000
 
 # Reacher: https://help.reacher.email/
 REACHER_HOST = https://stoplight.io/mocks/reacher/backend/68673 # ( REQUIRED )
