--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "license": "AGPL-3.0",
   "devDependencies": {
     "supabase": "^2.2.1"
+  },
+  "dependencies": {
+    "posthog-js": "^1.227.2"
   }
 }
