use a more up to date in-browser CSV parser
- resolves #1016
- use 'papaparse'
- uninstall 'convert-csv-to-json'

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,15 +30,16 @@
     "@primevue/themes": "^4.2.5",
     "@supabase/supabase-js": "^2.47.14",
     "@types/js-cookie": "^3.0.6",
+    "@types/papaparse": "^5.3.15",
     "@vite-pwa/nuxt": "^0.10.6",
     "autoprefixer": "^10.4.20",
-    "convert-csv-to-json": "^2.50.0",
     "js-cookie": "^3.0.5",
     "nitropack": "^2.10.4",
     "nuxt": "^3.15.4",
     "nuxt-mdi": "^2.1.1",
     "nuxt-security": "^2.1.5",
     "object-scan": "^19.0.5",
+    "papaparse": "^5.5.2",
     "pinia": "^2.3.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
