--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,7 @@ ARG IMAGE_REVERSE_PROXY
 ARG AVERAGE_EXTRACTION_RATE
 ARG POSTHOG_API_KEY
 ARG POSTHOG_INSTANCE_ADDRESS
+ARG POSTHOG_STATIC_ASSETS_PROXY
 ARG ENABLE_CREDIT
 ARG EXTERNAL_REFILL_CREDITS_LINK
 ARG CREDITS_PER_CONTACT
@@ -22,6 +23,7 @@ ENV IMAGE_REVERSE_PROXY ${IMAGE_REVERSE_PROXY}
 ENV AVERAGE_EXTRACTION_RATE ${AVERAGE_EXTRACTION_RATE}
 ENV POSTHOG_API_KEY ${POSTHOG_API_KEY}
 ENV POSTHOG_INSTANCE_ADDRESS ${POSTHOG_INSTANCE_ADDRESS}
+ENV POSTHOG_STATIC_ASSETS_PROXY ${POSTHOG_STATIC_ASSETS_PROXY}
 ENV ENABLE_CREDIT ${ENABLE_CREDIT}
 ENV EXTERNAL_REFILL_CREDITS_LINK ${EXTERNAL_REFILL_CREDITS_LINK}
 ENV CREDITS_PER_CONTACT ${CREDITS_PER_CONTACT}
