Fix: Update reverse proxy variables

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,6 +15,9 @@ ARG SAAS_SUPABASE_PROJECT_URL
 ARG SAAS_SUPABASE_ANON_KEY
 ARG SENTRY_DSN_FRONTEND
 ARG SENTRY_ENVIRONMENT_FRONTEND
+ARG POSTHOG_SELFHOSTED_INSTANCE
+ARG POSTHOG_INGEST_INSTANCE
+
 
 ENV SERVER_ENDPOINT ${SERVER_ENDPOINT}
 ENV SUPABASE_PROJECT_URL ${SUPABASE_PROJECT_URL}
@@ -31,6 +34,8 @@ ENV SAAS_SUPABASE_PROJECT_URL ${SAAS_SUPABASE_PROJECT_URL}
 ENV SAAS_SUPABASE_ANON_KEY ${SAAS_SUPABASE_ANON_KEY}
 ENV SENTRY_DSN_FRONTEND ${SENTRY_DSN_FRONTEND}
 ENV SENTRY_ENVIRONMENT_FRONTEND ${SENTRY_ENVIRONMENT_FRONTEND}
+ENV POSTHOG_SELFHOSTED_INSTANCE ${POSTHOG_SELFHOSTED_INSTANCE}
+ENV POSTHOG_INGEST_INSTANCE ${POSTHOG_INGEST_INSTANCE}
 
 
 
