Add useIdle from VueUse for idle detection

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,8 @@
   },
   "dependencies": {
     "@sentry/nuxt": "^9.1.0",
+    "@vueuse/core": "^13.0.0",
+    "@vueuse/nuxt": "^13.0.0",
     "posthog-js": "^1.229.1"
   }
 }
