--- a/backend/package.json
+++ b/backend/package.json
@@ -55,6 +55,7 @@
     "pg-format": "^1.0.4",
     "qs": "^6.14.0",
     "quoted-printable": "^1.0.1",
+    "sanitize-html": "^2.15.0",
     "simple-oauth2": "^5.1.0",
     "stripe": "^17.7.0",
     "winston": "^3.17.0",
@@ -83,6 +84,7 @@
     "@types/pg": "^8.11.10",
     "@types/pg-format": "^1.0.5",
     "@types/quoted-printable": "^1.0.2",
+    "@types/sanitize-html": "^2.13.0",
     "@types/simple-oauth2": "^5.0.7",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
