--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "@sentry/nuxt": "^9.3.0",
     "@vueuse/core": "^13.0.0",
     "@vueuse/nuxt": "^13.0.0",
-    "posthog-js": "^1.229.1"
+    "posthog-js": "^1.229.1",
+    "read-excel-file": "^5.8.7"
   }
 }
