--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "@sentry/tracing": "^7.120.3",
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.8.3",
+    "cheerio": "^1.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csv-stringify": "^6.5.2",
@@ -49,6 +50,7 @@
     "jsonwebtoken": "^9.0.2",
     "limiter": "^3.0.0",
     "nanoid": "^3.3.9",
+    "node-email-reply-parser": "^0.1.4",
     "nodemon": "^3.1.9",
     "pg": "^8.14.0",
     "pg-format": "^1.0.4",
@@ -72,6 +74,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/cheerio": "^0.22.35",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
