--- a/backend/package.json
+++ b/backend/package.json
@@ -35,7 +35,6 @@
     "@sentry/tracing": "^7.120.3",
     "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.8.3",
-    "cheerio": "^1.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csv-stringify": "^6.5.2",
@@ -47,6 +46,7 @@
     "html-entities": "^2.5.2",
     "imap": "^0.8.19",
     "ioredis": "^5.6.0",
+    "is-html": "^3.1.0",
     "jsonwebtoken": "^9.0.2",
     "limiter": "^3.0.0",
     "nanoid": "^3.3.9",
