update email signature pipeline

--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,7 @@
     "cors": "^2.8.5",
     "csv-stringify": "^6.5.2",
     "dotenv": "^16.4.7",
+    "email-reply-parser": "^2.0.1",
     "express": "^4.21.2",
     "express-sse": "github:omgimalexis/express-sse",
     "generic-pool": "^3.9.0",
@@ -50,11 +51,13 @@
     "is-html": "^3.1.0",
     "jsonwebtoken": "^9.0.2",
     "limiter": "^3.0.0",
+    "mailparser": "^3.7.2",
     "nanoid": "^3.3.11",
     "node-email-reply-parser": "^0.1.4",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
     "pg-format": "^1.0.4",
+    "postal-mime": "^2.4.3",
     "qs": "^6.14.0",
     "quoted-printable": "^1.0.1",
     "simple-oauth2": "^5.1.0",
@@ -78,6 +81,7 @@
     "@types/cheerio": "^0.22.35",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
+    "@types/email-reply-parser": "^1.4.2",
     "@types/express": "^4.17.17",
     "@types/imap": "^0.8.42",
     "@types/ioredis-mock": "^8.2.5",
