--- a/backend/package.json
+++ b/backend/package.json
@@ -50,10 +50,10 @@
     "ioredis": "^5.6.0",
     "is-html": "^3.1.0",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.8",
     "limiter": "^3.0.0",
     "mailparser": "^3.7.2",
     "nanoid": "^3.3.11",
-    "node-email-reply-parser": "^0.1.4",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
     "pg-format": "^1.0.4",
