update env variables

--- a/.env.master.dev
+++ b/.env.master.dev
@@ -55,6 +55,12 @@ REDIS_PUBSUB_COMMUNICATION_CHANNEL = 'stream-management'   # PubSub channel all 
 REDIS_EXTRACTING_STREAM_CONSUMER_GROUP = 'email-messages-consumer-group'   # Consumer group for extracting worker
 REDIS_CLEANING_STREAM_CONSUMER_GROUP = 'email-verification-consumer-group' # consumer group for cleaning worker
 
+
+REDIS_EMAIL_SIGNATURE_CONSUMER_BATCH_SIZE = 500
+REDIS_SIGNATURE_STREAM_NAME = 'email-signature-stream'
+REDIS_SIGNATURE_STREAM_CONSUMER_GROUP = 'email-signature-consumer-group'
+
+
 ## OAUTH PROVIDERS ##
 GOOGLE_CLIENT_ID = 21825381029-993l33883t26n48fv11mmm049j6qn6lh.apps.googleusercontent.com # ( REQUIRED ) Google client ID
 GOOGLE_SECRET = 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     # ( REQUIRED ) Google secret
