--- a/.env.master.prod
+++ b/.env.master.prod
@@ -53,6 +53,11 @@ REDIS_PUBSUB_COMMUNICATION_CHANNEL =     # (REQUIRED) PubSub channel all workers
 REDIS_EXTRACTING_STREAM_CONSUMER_GROUP = # (REQUIRED) Consumer group for extracting worker
 REDIS_CLEANING_STREAM_CONSUMER_GROUP =   # (REQUIRED) consumer group for cleaning worker
 
+REDIS_EMAIL_SIGNATURE_CONSUMER_BATCH_SIZE = 500
+REDIS_SIGNATURE_STREAM_NAME =
+REDIS_SIGNATURE_STREAM_CONSUMER_GROUP =
+
+
 ## OAUTH PROVIDERS ##
 GOOGLE_CLIENT_ID = # ( REQUIRED ) Google client ID
 GOOGLE_SECRET =    # ( REQUIRED ) Google secret
