--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "dev:mock-external-services": "nodemon src/mocks/enrichment/server.ts",
     "dev:worker": "nodemon src/messageWorker.ts",
     "dev:email-worker": "nodemon src/emailVerificationWorker.ts",
+    "dev:email-signature-worker": "nodemon src/emailSignatureWorker.ts",
     "dev:webhook-listener": "stripe listen --forward-to http://localhost:8081/api/payment/stripe/webhook",
     "dev:inspect": "node --inspect -r ts-node/register src/server.ts",
     "lint": "eslint src test",
@@ -39,6 +40,7 @@
     "cors": "^2.8.5",
     "csv-stringify": "^6.5.2",
     "dotenv": "^16.5.0",
+    "email-reply-parser": "^2.0.1",
     "express": "^4.21.2",
     "express-sse": "^1.0.0",
     "generic-pool": "^3.9.0",
@@ -47,11 +49,13 @@
     "imap": "^0.8.19",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.8",
     "limiter": "^3.0.0",
     "nanoid": "^3.3.11",
     "nodemon": "^3.1.10",
     "pg": "^8.15.6",
     "pg-format": "^1.0.4",
+    "postal-mime": "^2.4.3",
     "qs": "^6.14.0",
     "quoted-printable": "^1.0.1",
     "simple-oauth2": "^5.1.0",
@@ -72,8 +76,10 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/cheerio": "^0.22.35",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
+    "@types/email-reply-parser": "^1.4.2",
     "@types/express": "^4.17.17",
     "@types/imap": "^0.8.42",
     "@types/ioredis-mock": "^8.2.5",
