add: extract signature using llm

--- a/.env.master.dev
+++ b/.env.master.dev
@@ -61,6 +61,10 @@ REDIS_SIGNATURE_STREAM_NAME = 'email-signature-stream'
 REDIS_SIGNATURE_STREAM_CONSUMER_GROUP = 'email-signature-consumer-group'
 
 
+SIGNATURE_USE_LLM = false
+SIGNATURE_OPENROUTER_API_KEY =
+
+
 ## OAUTH PROVIDERS ##
 GOOGLE_CLIENT_ID = 21825381029-993l33883t26n48fv11mmm049j6qn6lh.apps.googleusercontent.com # ( REQUIRED ) Google client ID
 GOOGLE_SECRET = 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     # ( REQUIRED ) Google secret
