--- a/.env.master.prod
+++ b/.env.master.prod
@@ -57,6 +57,9 @@ REDIS_EMAIL_SIGNATURE_CONSUMER_BATCH_SIZE = 500
 REDIS_SIGNATURE_STREAM_NAME =
 REDIS_SIGNATURE_STREAM_CONSUMER_GROUP =
 
+SIGNATURE_USE_LLM = false
+SIGNATURE_OPENROUTER_API_KEY =
+
 
 ## OAUTH PROVIDERS ##
 GOOGLE_CLIENT_ID = # ( REQUIRED ) Google client ID
