--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev:backend-api": "npm run dev:api --prefix ./backend",
     "dev:backend-worker": "npm run dev:worker --prefix ./backend",
     "dev:backend-email-worker": "npm run dev:email-worker --prefix ./backend",
+    "dev:backend-email-signature-worker": "npm run dev:email-signature-worker --prefix ./backend",
     "dev:backend-mock-external-services": "npm run dev:mock-external-services --prefix ./backend"
   },
   "author": "ankaboot",
