--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "html-entities": "^2.6.0",
     "imap": "^0.8.19",
     "ioredis": "^5.6.1",
+    "is-url-http": "^2.3.9",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.8",
     "limiter": "^3.0.0",
@@ -55,7 +56,7 @@
     "nodemon": "^3.1.10",
     "pg": "^8.16.0",
     "pg-format": "^1.0.4",
-    "postal-mime": "^2.4.3",
+    "postal-mime": "^2.4.4",
     "qs": "^6.14.0",
     "quoted-printable": "^1.0.1",
     "simple-oauth2": "^5.1.0",
