--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,7 +9,10 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "*": ["./src/@types/*"]
+    }
   },
   "include": ["src/**/*", "test/**/*"]
 }
