--- a/backend/package.json
+++ b/backend/package.json
@@ -52,11 +52,12 @@
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.9",
     "limiter": "^3.0.0",
+    "mailparser": "^3.7.4",
     "nanoid": "^3.3.11",
     "nodemon": "^3.1.10",
     "pg": "^8.16.1",
     "pg-format": "^1.0.4",
-    "postal-mime": "^2.4.4",
+    "planer": "^1.2.0",
     "qs": "^6.14.0",
     "quoted-printable": "^1.0.1",
     "simple-oauth2": "^5.1.0",
@@ -85,6 +86,7 @@
     "@types/imap": "^0.8.42",
     "@types/ioredis-mock": "^8.2.5",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mailparser": "^3.4.6",
     "@types/node": "^22.10.5",
     "@types/pg": "^8.11.10",
     "@types/pg-format": "^1.0.5",
