Revert frontend/Dockerfile changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,24 +55,20 @@ services:
     container_name: nuxt_frontend
     build:
       context: frontend
-    environment:
-      SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
-      SUPABASE_PROJECT_URL=${SUPABASE_EXTERNAL_PROJECT_URL}
-      SAAS_SUPABASE_ANON_KEY=${SAAS_SUPABASE_ANON_KEY}
-      SAAS_SUPABASE_PROJECT_URL=${SAAS_SUPABASE_PROJECT_URL}
-      SERVER_ENDPOINT=${LEADMINER_API_HOST}
-      AVERAGE_EXTRACTION_RATE=${AVERAGE_EXTRACTION_RATE}
-      POSTHOG_API_KEY=${POSTHOG_API_KEY}
-      POSTHOG_INSTANCE_ADDRESS=${POSTHOG_INSTANCE_ADDRESS}
-      POSTHOG_STATIC_ASSETS_PROXY=${POSTHOG_STATIC_ASSETS_PROXY}
-      POSTHOG_PROXY_ADDRESS=${POSTHOG_PROXY_ADDRESS}
-      POSTHOG_INGEST_INSTANCE=${POSTHOG_INGEST_INSTANCE}
-      ENABLE_CREDIT=${ENABLE_CREDIT}
-      EXTERNAL_REFILL_CREDITS_LINK=${EXTERNAL_REFILL_CREDITS_LINK}
-      CREDITS_PER_CONTACT=${CREDITS_PER_CONTACT}
-      SENTRY_ENVIRONMENT_FRONTEND=${SENTRY_ENVIRONMENT_FRONTEND}
-      SENTRY_DSN_FRONTEND=${SENTRY_DSN_FRONTEND}
-      IMAGE_REVERSE_PROXY=${IMAGE_REVERSE_PROXY}
+      args:
+        SERVER_ENDPOINT: ${LEADMINER_API_HOST}
+        SUPABASE_PROJECT_URL: ${SUPABASE_PROJECT_URL}
+        SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
+        IMAGE_REVERSE_PROXY: ${IMAGE_REVERSE_PROXY}
+        AVERAGE_EXTRACTION_RATE: ${AVERAGE_EXTRACTION_RATE}
+        BANNER_IMAGE_URL: ${BANNER_IMAGE_URL}
+        POSTHOG_API_KEY: ${POSTHOG_API_KEY}
+        POSTHOG_INSTANCE_ADDRESS: ${POSTHOG_INSTANCE_ADDRESS}
+        ENABLE_CREDIT: ${ENABLE_CREDIT}
+        EXTERNAL_REFILL_CREDITS_LINK: ${EXTERNAL_REFILL_CREDITS_LINK}
+        CREDITS_PER_CONTACT: ${CREDITS_PER_CONTACT}
+        SAAS_SUPABASE_PROJECT_URL: ${SAAS_SUPABASE_PROJECT_URL}
+        SAAS_SUPABASE_ANON_KEY: ${SAAS_SUPABASE_ANON_KEY}
     ports:
       - 8082:3000
     restart: always
