--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,45 @@
 FROM node:lts-alpine as build-stage
 
+ARG SERVER_ENDPOINT
+ARG SUPABASE_PROJECT_URL
+ARG SUPABASE_ANON_KEY
+ARG IMAGE_REVERSE_PROXY
+ARG AVERAGE_EXTRACTION_RATE
+ARG POSTHOG_API_KEY
+ARG POSTHOG_INSTANCE_ADDRESS
+ARG POSTHOG_STATIC_ASSETS_PROXY
+ARG POSTHOG_INGEST_INSTANCE
+ARG POSTHOG_PROXY_ADDRESS
+ARG ENABLE_CREDIT
+ARG EXTERNAL_REFILL_CREDITS_LINK
+ARG CREDITS_PER_CONTACT
+ARG SAAS_SUPABASE_PROJECT_URL
+ARG SAAS_SUPABASE_ANON_KEY
+ARG SENTRY_DSN_FRONTEND
+ARG SENTRY_ENVIRONMENT_FRONTEND
+
+
+
+ENV SERVER_ENDPOINT ${SERVER_ENDPOINT}
+ENV SUPABASE_PROJECT_URL ${SUPABASE_PROJECT_URL}
+ENV SUPABASE_ANON_KEY ${SUPABASE_ANON_KEY}
+ENV IMAGE_REVERSE_PROXY ${IMAGE_REVERSE_PROXY}
+ENV AVERAGE_EXTRACTION_RATE ${AVERAGE_EXTRACTION_RATE}
+ENV POSTHOG_API_KEY ${POSTHOG_API_KEY}
+ENV POSTHOG_INGEST_INSTANCE ${POSTHOG_INGEST_INSTANCE}
+ENV POSTHOG_PROXY_ADDRESS ${POSTHOG_PROXY_ADDRESS}
+ENV POSTHOG_INSTANCE_ADDRESS ${POSTHOG_INSTANCE_ADDRESS}
+ENV POSTHOG_STATIC_ASSETS_PROXY ${POSTHOG_STATIC_ASSETS_PROXY}
+ENV ENABLE_CREDIT ${ENABLE_CREDIT}
+ENV EXTERNAL_REFILL_CREDITS_LINK ${EXTERNAL_REFILL_CREDITS_LINK}
+ENV CREDITS_PER_CONTACT ${CREDITS_PER_CONTACT}
+ENV SAAS_SUPABASE_PROJECT_URL ${SAAS_SUPABASE_PROJECT_URL}
+ENV SAAS_SUPABASE_ANON_KEY ${SAAS_SUPABASE_ANON_KEY}
+ENV SENTRY_DSN_FRONTEND ${SENTRY_DSN_FRONTEND}
+ENV SENTRY_ENVIRONMENT_FRONTEND ${SENTRY_ENVIRONMENT_FRONTEND}
+
+
+
 WORKDIR /frontend
 COPY . .
 
