add new env vars

--- a/.env.master.dev
+++ b/.env.master.dev
@@ -21,9 +21,12 @@ FRONTEND_HOST = http://localhost:8082   # ( REQUIRED )
 LEADMINER_API_PORT = 8081   # ( REQUIRED )
 LEADMINER_API_HOST = http://localhost:8081 # ( REQUIRED )
 
-LEADMINER_FETCH_BATCH_SIZE = 100          # ( REQUIRED ) Sends notification every x processed items to the frontend
 LEADMINER_API_HASH_SECRET = change_me     # ( REQUIRED ) Used for hashing secrets
 LEADMINER_MINING_ID_GENERATOR_LENGTH = 10 # ( REQUIRED ) Length of the task id
+
+FETCHING_BATCH_SIZE_TO_SEND = 100          # ( REQUIRED ) Sends notification every x processed items to the frontend
+FETCHING_CHUNK_SIZE_PER_CONNECTION = 10000
+FETCHING_MAX_CONNECTIONS_PER_FOLDER = 5
 
 ## LOGGING ##
 # GRAFANA_LOKI_HOST =             # Use Loki transport for logging (Default is console)
