fetch with concurrent connections for big folders

--- a/backend/package.json
+++ b/backend/package.json
@@ -56,6 +56,7 @@
     "mailparser": "^3.7.4",
     "nanoid": "^3.3.11",
     "nodemon": "^3.1.10",
+    "p-limit": "^7.1.0",
     "pg": "^8.16.1",
     "pg-format": "^1.0.4",
     "planer": "^1.2.0",
