--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "dev:mock-external-services": "nodemon src/mocks/enrichment/server.ts",
     "dev:worker": "nodemon src/messageWorker.ts",
     "dev:email-worker": "nodemon src/emailVerificationWorker.ts",
+    "dev:email-signature-worker": "nodemon src/emailSignatureWorker.ts",
     "dev:webhook-listener": "stripe listen --forward-to http://localhost:8081/api/payment/stripe/webhook",
     "dev:inspect": "node --inspect -r ts-node/register src/server.ts",
     "lint": "eslint src test",
@@ -30,37 +31,43 @@
   "author": "ankaboot",
   "license": "GNU AGPL v3",
   "dependencies": {
-    "@ankaboot.io/imap-autoconfig": "^0.1.2",
-    "@faker-js/faker": "^9.3.0",
-    "@sentry/node": "^8.49.0",
-    "@sentry/tracing": "^7.120.2",
-    "@supabase/supabase-js": "^2.47.10",
-    "axios": "^1.7.9",
+    "@faker-js/faker": "^9.9.0",
+    "@sentry/node": "^8.55.0",
+    "@sentry/tracing": "^7.120.4",
+    "@supabase/supabase-js": "^2.53.0",
+    "axios": "^1.10.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "csv-stringify": "^6.5.2",
-    "dotenv": "^16.4.7",
+    "csv-stringify": "^6.6.0",
+    "dotenv": "^16.6.1",
+    "email-reply-parser": "^2.0.1",
     "express": "^4.21.2",
-    "express-sse": "github:omgimalexis/express-sse",
+    "express-sse": "^1.0.0",
     "generic-pool": "^3.9.0",
-    "google-auth-library": "^9.15.0",
-    "html-entities": "^2.5.2",
+    "google-auth-library": "^9.15.1",
+    "html-entities": "^2.6.0",
     "imap": "^0.8.19",
-    "ioredis": "^5.4.2",
+    "imapflow": "^1.0.193",
+    "ioredis": "^5.6.1",
+    "is-url-http": "^2.3.9",
     "jsonwebtoken": "^9.0.2",
-    "nanoid": "^3.3.8",
-    "nodemon": "^3.1.9",
-    "pg": "^8.13.1",
+    "libphonenumber-js": "^1.12.10",
+    "limiter": "^3.0.0",
+    "mailparser": "^3.7.4",
+    "nanoid": "^3.3.11",
+    "nodemon": "^3.1.10",
+    "pg": "^8.16.3",
+    "p-limit": "^7.1.0",
     "pg-format": "^1.0.4",
-    "qs": "^6.13.1",
+    "planer": "^1.2.0",
+    "qs": "^6.14.0",
     "quoted-printable": "^1.0.1",
     "simple-oauth2": "^5.1.0",
-    "stripe": "^17.5.0",
-    "throttled-queue": "^2.1.4",
+    "stripe": "^17.7.0",
     "winston": "^3.17.0",
     "winston-loki": "^6.1.3",
     "xoauth2": "^1.2.0",
-    "zod": "^3.24.1",
+    "zod": "^3.25.76",
     "zod-error": "^1.5.0"
   },
   "overrides": {
@@ -73,12 +80,15 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/cheerio": "^0.22.35",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
+    "@types/email-reply-parser": "^1.4.2",
     "@types/express": "^4.17.17",
     "@types/imap": "^0.8.42",
     "@types/ioredis-mock": "^8.2.5",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mailparser": "^3.4.6",
     "@types/node": "^22.10.5",
     "@types/pg": "^8.11.10",
     "@types/pg-format": "^1.0.5",
