--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,20 +24,22 @@
     "@nuxt/scripts": "^0.9.5",
     "@nuxt/test-utils": "^3.15.4",
     "@nuxtjs/i18n": "^9.1.1",
-    "@nuxtjs/supabase": "^1.4.5",
+    "@nuxtjs/supabase": "^1.4.6",
     "@pinia/nuxt": "^0.9.0",
     "@primevue/nuxt-module": "^4.2.5",
     "@primevue/themes": "^4.2.5",
     "@supabase/supabase-js": "^2.47.14",
     "@types/js-cookie": "^3.0.6",
+    "@types/papaparse": "^5.3.15",
     "@vite-pwa/nuxt": "^0.10.6",
     "autoprefixer": "^10.4.20",
     "js-cookie": "^3.0.5",
     "nitropack": "^2.10.4",
-    "nuxt": "^3.15.1",
+    "nuxt": "^3.15.4",
     "nuxt-mdi": "^2.1.1",
     "nuxt-security": "^2.1.5",
     "object-scan": "^19.0.5",
+    "papaparse": "^5.5.2",
     "pinia": "^2.3.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
@@ -48,9 +50,15 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-primeui": "^0.4.0",
     "typescript": "^5.7.3",
-    "vitest": "^2.1.8",
+    "vitest": "^3.0.8",
     "vue": "^3.5.13",
-    "vue-tsc": "^2.2.0",
-    "convert-csv-to-json": "^2.50.0"
+    "vue-tsc": "^2.2.0"
+  },
+  "dependencies": {
+    "@sentry/nuxt": "^9.40.0",
+    "@vueuse/core": "^13.5.0",
+    "@vueuse/nuxt": "^13.5.0",
+    "posthog-js": "^1.257.0",
+    "read-excel-file": "^5.8.8"
   }
 }
