Add redis eviction policy

--- a/.env.master.prod
+++ b/.env.master.prod
@@ -46,6 +46,8 @@ REDIS_HOST = localhost  # ( REQUIRED ) Redis host
 REDIS_PORT = 6379       # ( REQUIRED ) Redis port
 REDIS_USERNAME =        # ( OPTIONAL ) Redis username
 REDIS_PASSWORD =        # ( OPTIONAL ) Redis password
+REDIS_EVICTION_POLICY = allkeys-lru    # ( REQUIRED ) Redis Eviction policies: noeviction, allkeys-lru, allkeys-random, volatile-lru, volatile-random, volatile-ttl
+REDIS_MAXMEMORY = 1gb                  # ( REQUIRED ) Max memory used by redis, adjust it depending on your server capacity.
 REDIS_DB = 0            # ( REQUIRED ) Redis db
 REDIS_TLS = false       # ( REQUIRED ) Enable or disable TLS for Redis
 REDIS_EXPIRATION_TIMEOUT = 7776000 # ( REQUIRED ) Expiration timeout (90 days ) for Redis entries
