--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
     ports:
       - ${LEADMINER_API_PORT}:${LEADMINER_API_PORT}
 
-  leadminer-worker:
-    image: leadminer-worker:git
-    container_name: leadminer_worker
+  leadminer-contact-extraction-worker:
+    image: leadminer-contact-extraction-worker:git
+    container_name: leadminer_contact_extraction
     build:
       context: backend
       dockerfile: worker.Dockerfile
@@ -28,9 +28,9 @@ services:
     depends_on:
       - redis
 
-  leadminer-email-worker:
-    image: leadminer-email-worker:git
-    container_name: leadminer_email_worker
+  leadminer-email-verification-worker:
+    image: leadminer-email-verification-worker:git
+    container_name: leadminer_email_verification_worker
     build:
       context: backend
       dockerfile: email-verification-worker.Dockerfile
@@ -45,6 +45,17 @@ services:
     build:
       context: backend
       dockerfile: email-signature-worker.Dockerfile
+    env_file:
+      - .env
+    depends_on:
+      - redis
+
+  leadminer-email-fetcher-service:
+    image: leadminer-email-fetcher-service:git
+    container_name: leadminer_email_fetcher_service
+    build:
+      context: micro-services/emails-fetcher
+      dockerfile: email-fetcher.Dockerfile
     env_file:
       - .env
     depends_on:
