--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "@types/papaparse": "^5.3.16",
     "@vite-pwa/nuxt": "^1.0.4",
     "autoprefixer": "^10.4.21",
+    "eslint-plugin-import": "^2.32.0",
     "js-cookie": "^3.0.5",
     "nitropack": "^2.12.6",
     "nuxt": "^4.1.2",
