fix: releasing imap connection & use worker_thread

--- a/micro-services/emails-fetcher/package.json
+++ b/micro-services/emails-fetcher/package.json
@@ -40,9 +40,10 @@
     "ioredis": "^5.7.0",
     "mailparser": "^3.7.4",
     "nodemon": "^3.1.10",
-    "p-queue": "^8.1.0",
+    "p-queue": "^9.0.0",
     "pg": "^8.16.3",
     "pg-format": "^1.0.4",
+    "poolifier": "^5.1.6",
     "simple-oauth2": "^5.1.0",
     "winston": "^3.17.0",
     "winston-loki": "^6.1.3",
