--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,10 @@
     "@nuxtjs/i18n": "^10.1.0",
     "@nuxtjs/supabase": "^2.0.0",
     "@pinia/nuxt": "^0.11.2",
-    "@primevue/nuxt-module": "^4.3.9",
-    "@primevue/themes": "^4.3.9",
+    "@primevue/nuxt-module": "^4.4.0",
+    "@primevue/themes": "^4.4.0",
     "@supabase/supabase-js": "^2.58.0",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/js-cookie": "^3.0.6",
     "@types/papaparse": "^5.3.16",
     "@vite-pwa/nuxt": "^1.0.4",
@@ -45,10 +46,10 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "primeicons": "^7.0.0",
-    "primevue": "^4.3.9",
+    "primevue": "^4.4.0",
     "recheck": "^4.5.0",
     "sass": "^1.93.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.14",
     "tailwindcss-primeui": "^0.6.1",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4",
@@ -59,7 +60,7 @@
     "@sentry/nuxt": "^10.17.0",
     "@vueuse/core": "^13.9.0",
     "@vueuse/nuxt": "^13.9.0",
-    "posthog-js": "^1.268.9",
+    "posthog-js": "^1.269.1",
     "read-excel-file": "^6.0.1"
   }
 }
