--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,6 @@
     "@nuxtjs/supabase": "^2.0.0",
     "@pinia/nuxt": "^0.11.2",
     "@primevue/nuxt-module": "^4.4.0",
-    "@primevue/themes": "^4.4.0",
     "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/js-cookie": "^3.0.6",
@@ -57,6 +56,7 @@
     "vue-tsc": "^3.1.0"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.5",
     "@sentry/nuxt": "^10.17.0",
     "@vueuse/core": "^13.9.0",
     "@vueuse/nuxt": "^13.9.0",
