--- a/.env.master.dev
+++ b/.env.master.dev
@@ -136,3 +136,7 @@ THEDIG_API_KEY = _
 #ENRICH LAYER
 ENRICH_LAYER_URL = https://enrichlayer.com/
 ENRICH_LAYER_API_KEY = _
+
+#EMAIL FETCHING SERVICE
+EMAIL_FETCHING_SERVICE_URL = http://localhost:8083
+EMAIL_FETCHING_SERVICE_API_TOKEN = test-key
