update email fetching service env.dev

--- a/micro-services/emails-fetcher/.env.dev
+++ b/micro-services/emails-fetcher/.env.dev
@@ -4,9 +4,15 @@ APP_PORT = 8083
 
 LOG_LEVEL = debug   # Logging level (debug, info, notice, warning...)
 
+EMAIL_FETCHING_SERVICE_PORT = 8083
+EMAIL_FETCHING_SERVICE_LOG_LEVEL = debug
+EMAIL_FETCHING_SERVICE_API_TOKEN = "test-key"
+EMAIL_FETCHING_SERVICE_NAME = "leadminer-email-fetching-service"
+
 FETCHING_BATCH_SIZE_TO_SEND = 200
 FETCHING_CHUNK_SIZE_PER_CONNECTION = 2000
 FETCHING_MAX_CONNECTIONS_PER_FOLDER = 10
+FETCHING_MAX_BODY_TEXT_PLAIN_SIZE = 100000 # 100kb
 
 LEADMINER_API_HOST = http://localhost:8081 # ( REQUIRED )
 LEADMINER_API_HASH_SECRET = change_me     # ( REQUIRED ) Used for hashing secrets
