fix: use dev command instead of start

--- a/micro-services/emails-fetcher/package.json
+++ b/micro-services/emails-fetcher/package.json
@@ -9,8 +9,7 @@
     "test:unit": "jest ./test/unit",
     "test:integration": "jest ./test/integration",
     "test-ci:unit": "jest ./test/unit --coverage",
-    "dev": "npm run build & nodemon src/server.ts",
-    "start": "nodemon src/server.ts",
+    "dev": "nodemon src/server.ts",
     "inspect": "node --inspect -r ts-node/register src/server.ts",
     "lint": "eslint src test",
     "lint:fix": "eslint --fix src test",
