fix: add fallback for signature extraction & minor fixes

--- a/micro-services/emails-fetcher/.env.dev
+++ b/micro-services/emails-fetcher/.env.dev
@@ -43,3 +43,23 @@ REDIS_EXPIRATION_TIMEOUT = 7776000 # ( REQUIRED ) Expiration timeout (90 days ) 
 ## SENTRY DSN ##
 # https://sentry.io
 # SENTRY_DSN =      # ( OPTIONAL ) Sentry DSN for reporting and monitoring
+
+# ==============| API - OAUTH CONFIG |============= #
+GOOGLE_CLIENT_ID = 21825381029-993l33883t26n48fv11mmm049j6qn6lh.apps.googleusercontent.com  # ( REQUIRED ) Google client ID
+GOOGLE_SECRET = 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     # ( REQUIRED ) Google secret
+AZURE_CLIENT_ID = your_azure_client_id                  # ( REQUIRED ) Azure client ID
+AZURE_SECRET = your_azure_client_secret                 # ( REQUIRED ) Azure secret
+
+
+# ==============| API - IMAP CONNECTION SETTINGS |============= #
+IMAP_FETCH_BODY = true                  # ( REQUIRED ) Whether to fetch email bodies
+IMAP_AUTH_TIMEOUT = 10000               # ( REQUIRED ) Timeout (ms) for authentication after connection
+IMAP_CONNECTION_TIMEOUT = 10000         # ( REQUIRED ) Timeout (ms) for establishing connection
+IMAP_MAX_CONNECTIONS = 10               # ( REQUIRED ) Maximum simultaneous IMAP connections (recommended 1–15)
+
+
+# ==============| API - FETCHING CONFIGURATION |============= #
+FETCHING_BATCH_SIZE_TO_SEND = 200                     # Number of messages per sending batch
+FETCHING_CHUNK_SIZE_PER_CONNECTION = 2000             # Number of messages fetched per IMAP connection chunk
+FETCHING_MAX_CONNECTIONS_PER_FOLDER = 10              # Maximum concurrent connections per IMAP folder
+FETCHING_MAX_BODY_TEXT_PLAIN_SIZE = 12000
