fix: add fallback for signature extraction & minor fixes (#2479)

--- a/micro-services/emails-fetcher/.env.dev
+++ b/micro-services/emails-fetcher/.env.dev
@@ -49,3 +49,4 @@ IMAP_MAX_CONNECTIONS = 10               # ( REQUIRED ) Maximum simultaneous IMAP
 FETCHING_BATCH_SIZE_TO_SEND = 200                     # Number of messages per sending batch
 FETCHING_CHUNK_SIZE_PER_CONNECTION = 2000             # Number of messages fetched per IMAP connection chunk
 FETCHING_MAX_CONNECTIONS_PER_FOLDER = 10              # Maximum concurrent connections per IMAP folder
+FETCHING_MAX_BODY_TEXT_PLAIN_SIZE = 10500             # Maximum concurrent connections per IMAP folder
