--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "leadminer",
   "private": true,
   "scripts": {
-    "install-deps": "npm i && npm run install-deps:backend && npm run install-deps:frontend",
-    "install-deps:backend": "npm i --prefix ./backend",
+    "install-deps": "npm i && npm run install-deps:backend && npm run install-deps:frontend && npm run install-deps:micro-services-emails-fetcher",
     "install-deps:frontend": "npm i --prefix ./frontend",
+    "install-deps:backend": "npm i --prefix ./backend",
+    "install-deps:micro-services-emails-fetcher": "npm i --prefix ./micro-services/emails-fetcher",
     "dev:all": "./run.sh",
     "dev:generate-env": "bash ./generate_env.sh",
     "dev:supabase": "supabase start",
