--- a/micro-services/emails-fetcher/package.json
+++ b/micro-services/emails-fetcher/package.json
@@ -32,9 +32,11 @@
     "axios": "^1.12.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
+    "encoding-japanese": "^2.2.0",
     "express": "^4.21.2",
     "express-sse": "^1.0.0",
     "generic-pool": "^3.9.0",
+    "iconv-lite": "^0.7.0",
     "imap": "^0.8.19",
     "imapflow": "^1.0.198",
     "ioredis": "^5.7.0",
@@ -59,6 +61,7 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/cors": "^2.8.17",
+    "@types/encoding-japanese": "^2.2.1",
     "@types/express": "^4.17.17",
     "@types/imap": "^0.8.42",
     "@types/ioredis-mock": "^8.2.5",
