--- a/supabase/functions/mail/deno.json
+++ b/supabase/functions/mail/deno.json
@@ -1,8 +1,7 @@
 {
   "imports": {
-    "hono": "npm:hono@4.7.4",
-    "nodemailer": "npm:nodemailer@^7.0.5",
-    "zod": "npm:zod@3.24.2",
-    "supabase": "https://esm.sh/@supabase/supabase-js@2"
+    "hono": "https://esm.sh/hono@4.7.4",
+    "supabase": "https://esm.sh/@supabase/supabase-js@2",
+    "nodemailer": "npm:nodemailer@^7.0.5"
   }
 }
