--- a/supabase/functions/.env.dev
+++ b/supabase/functions/.env.dev
@@ -8,7 +8,7 @@ SMTP_PORT=587
 SMTP_USER=your-secret-smtp-username
 SMTP_PASS=your-secret-smtp-password
 
-LOGO_URL="https://storage.mlcdn.com/account_image/34743/bwRnaSR6sJ9gsLneuuDUbmjOCLIddc3MAqoRq345.png";
-SITE_URL="https://leadminer.io";
+LOGO_URL="https://storage.mlcdn.com/account_image/34743/bwRnaSR6sJ9gsLneuuDUbmjOCLIddc3MAqoRq345.png"
+SITE_URL="https://leadminer.io"
 CONTACTS_URL="https://app.leadminer.io/contacts" # maybe /:miningId, auto filters by miningId
-ENRICH_URL="https://app.leadminer.io/enrich";
+ENRICH_URL="https://app.leadminer.io/enrich"
