--- a/supabase/functions/.env.prod
+++ b/supabase/functions/.env.prod
@@ -6,3 +6,8 @@ SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
 SMTP_PASS=
+
+LOGO_URL="https://storage.mlcdn.com/account_image/34743/bwRnaSR6sJ9gsLneuuDUbmjOCLIddc3MAqoRq345.png"
+SITE_URL="https://leadminer.io"
+CONTACTS_URL="https://app.leadminer.io/contacts" # maybe /:miningId, auto filters by miningId
+ENRICH_URL="https://app.leadminer.io/enrich"
