remove env ENRICH_URL

--- a/supabase/functions/.env.dev
+++ b/supabase/functions/.env.dev
@@ -11,5 +11,4 @@ SMTP_PASS=your-secret-smtp-password
 
 LOGO_URL="https://storage.mlcdn.com/account_image/34743/bwRnaSR6sJ9gsLneuuDUbmjOCLIddc3MAqoRq345.png"
 SITE_URL="https://leadminer.io"
-CONTACTS_URL="https://app.leadminer.io/contacts" # maybe /:miningId, auto filters by miningId
-ENRICH_URL="https://app.leadminer.io/enrich"
+CONTACTS_URL="https://app.leadminer.io/contacts" 
