--- a/supabase/functions/.env.prod
+++ b/supabase/functions/.env.prod
@@ -2,6 +2,7 @@ LEADMINER_ANON_KEY=      # ( REQUIRED ) Supabase anon key
 LEADMINER_HASH_SECRET=   # ( REQUIRED ) The hash secret used by backend
 LEADMINER_PROJECT_URL=   # ( REQUIRED ) Supabase project url
 LEADMINER_SECRET_TOKEN=  # ( REQUIRED ) Supabase service role key
+
 SMTP_HOST=
 SMTP_PORT=
 SMTP_USER=
@@ -9,5 +10,4 @@ SMTP_PASS=
 
 LOGO_URL="https://storage.mlcdn.com/account_image/34743/bwRnaSR6sJ9gsLneuuDUbmjOCLIddc3MAqoRq345.png"
 SITE_URL="https://leadminer.io"
-CONTACTS_URL="https://app.leadminer.io/contacts" # maybe /:miningId, auto filters by miningId
-ENRICH_URL="https://app.leadminer.io/enrich"
+CONTACTS_URL="https://app.leadminer.io/contacts"
