use FRONTEND_HOST instead of CONTACT_URL & SITE_URL

--- a/supabase/functions/.env.dev
+++ b/supabase/functions/.env.dev
@@ -10,5 +10,5 @@ SMTP_USER=your-secret-smtp-username
 SMTP_PASS=your-secret-smtp-password
 
 LOGO_URL="https://storage.mlcdn.com/account_image/34743/bwRnaSR6sJ9gsLneuuDUbmjOCLIddc3MAqoRq345.png"
-SITE_URL="https://leadminer.io"
-CONTACTS_URL="https://app.leadminer.io/contacts" 
+FRONTEND_HOST="https://leadminer.io"
+FRONTEND_HOST="https://app.leadminer.io/contacts" 
