--- a/supabase/functions/.env.prod
+++ b/supabase/functions/.env.prod
@@ -9,5 +9,5 @@ SMTP_USER=
 SMTP_PASS=
 
 LOGO_URL="https://storage.mlcdn.com/account_image/34743/bwRnaSR6sJ9gsLneuuDUbmjOCLIddc3MAqoRq345.png"
-SITE_URL="https://leadminer.io"
-CONTACTS_URL="https://app.leadminer.io/contacts"
+FRONTEND_HOST="https://leadminer.io"
+FRONTEND_HOST="https://app.leadminer.io/contacts"
