mining finished email notification (#2482)
* fix install & run scripts

* mail edge function

* Create 20251016215841_add_mining_id_fk.sql

* frontend

* Update package-lock.json

* backend

* Delete db.ts

* Update 20251016215841_add_mining_id_fk.sql

* mail edge function

* rename file

* mailMiningComplete on cleaningFinished

* Update index.ts

* env

* Update TasksManager.ts

* use miningid for mining stats, source and userid

* Update template.ts

* Update email.ts

* Update 20251016215841_add_mining_id.sql

* Delete deno.lock

* Update db.ts

* Update 20251016215841_add_mining_id.sql

* Update .env.dev

* Update email.ts

* refine on task finished

* frontend: remove refineContacts on task finished

* Update email.ts

* fix linting issues

* mention mining session id in the template

* Update template.ts

* typo and code styling fixes

* Update template.ts

* Add ✅ before Mining complete in Subject

* remove env ENRICH_URL

* Update email.ts

* use FRONTEND_HOST instead of CONTACT_URL & SITE_URL

* remove duplicate FRONTEND_HOST

* Update taskManager.test.ts

* make getCompletionStatus static

* prettify

--- a/supabase/functions/.env.prod
+++ b/supabase/functions/.env.prod
@@ -2,3 +2,11 @@ LEADMINER_ANON_KEY=      # ( REQUIRED ) Supabase anon key
 LEADMINER_HASH_SECRET=   # ( REQUIRED ) The hash secret used by backend
 LEADMINER_PROJECT_URL=   # ( REQUIRED ) Supabase project url
 LEADMINER_SECRET_TOKEN=  # ( REQUIRED ) Supabase service role key
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+
+LOGO_URL="https://storage.mlcdn.com/account_image/34743/bwRnaSR6sJ9gsLneuuDUbmjOCLIddc3MAqoRq345.png"
+FRONTEND_HOST="https://app.leadminer.io/contacts"
