--- a/supabase/functions/.env.dev
+++ b/supabase/functions/.env.dev
@@ -10,4 +10,4 @@ SMTP_USER=your-secret-smtp-username
 SMTP_PASS=your-secret-smtp-password
 
 LOGO_URL="https://storage.mlcdn.com/account_image/34743/bwRnaSR6sJ9gsLneuuDUbmjOCLIddc3MAqoRq345.png"
-FRONTEND_HOST="https://app.leadminer.io/contacts" 
+FRONTEND_HOST="http://localhost:8082"
