--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,7 @@
     "@sentry/nuxt": "^10.17.0",
     "@vueuse/core": "^13.9.0",
     "@vueuse/nuxt": "^13.9.0",
+    "phone": "^3.1.67",
     "posthog-js": "^1.269.1",
     "read-excel-file": "^6.0.1"
   }
