add env: `NOMINATIM_URL`

--- a/.env.docker
+++ b/.env.docker
@@ -8,6 +8,7 @@ AVERAGE_EXTRACTION_RATE = 50                          # ( OPTIONAL ) Estimated e
 ENABLE_CREDIT = true                                  # ( REQUIRED ) Enable or disable credit-based operations
 CREDITS_PER_CONTACT = 1                               # ( REQUIRED ) Number of credits charged per contact enrichment/export
 EXTERNAL_REFILL_CREDITS_LINK =                        # ( OPTIONAL ) External link for users to purchase or refill credits
+NOMINATIM_URL = 'https://nominatim.openstreetmap.org/search'
 
 # ==============| BACKEND |============= #
 APP_NAME  = leadminer
