--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,6 +17,7 @@ ARG SAAS_SUPABASE_PROJECT_URL
 ARG SAAS_SUPABASE_ANON_KEY
 ARG SENTRY_DSN_FRONTEND
 ARG SENTRY_ENVIRONMENT_FRONTEND
+ARG NOMINATIM_URL
 
 
 
@@ -37,6 +38,7 @@ ENV SAAS_SUPABASE_PROJECT_URL ${SAAS_SUPABASE_PROJECT_URL}
 ENV SAAS_SUPABASE_ANON_KEY ${SAAS_SUPABASE_ANON_KEY}
 ENV SENTRY_DSN_FRONTEND ${SENTRY_DSN_FRONTEND}
 ENV SENTRY_ENVIRONMENT_FRONTEND ${SENTRY_ENVIRONMENT_FRONTEND}
+ENV NOMINATIM_URL ${NOMINATIM_URL}
 
 
 
