--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,7 @@ services:
         CREDITS_PER_CONTACT: ${CREDITS_PER_CONTACT}
         SAAS_SUPABASE_PROJECT_URL: ${SAAS_SUPABASE_PROJECT_URL}
         SAAS_SUPABASE_ANON_KEY: ${SAAS_SUPABASE_ANON_KEY}
+        NOMINATIM_URL: ${NOMINATIM_URL}
     ports:
       - 8082:3000
     restart: always
