--- a/supabase/functions/.env.dev
+++ b/supabase/functions/.env.dev
@@ -9,5 +9,5 @@ SMTP_PORT=587
 SMTP_USER=your-secret-smtp-username
 SMTP_PASS=your-secret-smtp-password
 
-LOGO_URL="https://storage.mlcdn.com/account_image/34743/bwRnaSR6sJ9gsLneuuDUbmjOCLIddc3MAqoRq345.png"
+LOGO_URL="https://db.leadminer.io/storage/v1/object/public/templates/LogoWithIcon.png"
 FRONTEND_HOST="http://localhost:8082"
