--- a/supabase/functions/.env.prod
+++ b/supabase/functions/.env.prod
@@ -8,5 +8,5 @@ SMTP_PORT=
 SMTP_USER=
 SMTP_PASS=
 
-LOGO_URL="https://storage.mlcdn.com/account_image/34743/bwRnaSR6sJ9gsLneuuDUbmjOCLIddc3MAqoRq345.png"
+LOGO_URL="https://db.leadminer.io/storage/v1/object/public/templates/LogoWithIcon.png"
 FRONTEND_HOST="https://app.leadminer.io"
