--- a/backend/package.json
+++ b/backend/package.json
@@ -59,6 +59,7 @@
     "pg": "^8.16.3",
     "pg-format": "^1.0.4",
     "planer": "^1.2.0",
+    "pst-extractor": "^1.11.0",
     "qs": "^6.14.0",
     "quoted-printable": "^1.0.1",
     "simple-oauth2": "^5.1.0",
