fix env variables stream settings

--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -52,7 +52,7 @@ REDIS_SIGNATURE_STREAM_CONSUMER_GROUP = 'email-signature-consumer-group'
 REDIS_CLEANING_STREAM_CONSUMER_GROUP = 'email-verification-consumer-group' # consumer group for cleaning worker
 REDIS_EXTRACTING_STREAM_CONSUMER_GROUP = 'email-messages-consumer-group'   # Consumer group for extracting worker
 REDIS_EMAIL_SIGNATURE_CONSUMER_BATCH_SIZE = 500
-REDIS_EMAIL_VERIFICATION_CONSUMER_BATCH_SIZE = 500
+REDIS_EMAIL_VERIFICATION_CONSUMER_BATCH_SIZE = 1000
 
 
 # ==============| API - OAUTH CONFIG |============= #
@@ -111,14 +111,14 @@ REACHER_RATE_LIMITER_INTERVAL = 60000 # 1 minute
 #   - EnrichLayer: https://enrichlayer.com/docs/pc/#enrich-layer-overview
 #
 THEDIG_URL = http://127.0.0.1:8083/thedig/
-THEDIG_API_KEY = _
+THEDIG_API_KEY = test-api-key
 
 VOILANORBERT_URL = http://127.0.0.1:8083/voilanorbert/2018-01-08/
 VOILANORBERT_USERNAME = any_string
 VOILANORBERT_API_KEY = test-api-key
 
-ENRICH_LAYER_URL = https://enrichlayer.com/
-ENRICH_LAYER_API_KEY = _
+ENRICH_LAYER_URL = http://127.0.0.1:8083/enrichlayer/
+ENRICH_LAYER_API_KEY = test-api-key
 
 
 # ==============| THIRD-PARTY - IMAP EMAIL FETCHING SERVICE |============= #
