--- a/backend/package.json
+++ b/backend/package.json
@@ -51,7 +51,6 @@
     "is-url-http": "^2.3.10",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.14",
-    "limiter": "^3.0.0",
     "mailparser": "^3.7.4",
     "nanoid": "^3.3.11",
     "nodemon": "^3.1.10",
@@ -61,6 +60,7 @@
     "planer": "^1.2.0",
     "qs": "^6.14.0",
     "quoted-printable": "^1.0.1",
+    "rate-limiter-flexible": "^9.0.0",
     "simple-oauth2": "^5.1.0",
     "stripe": "^17.7.0",
     "winston": "^3.17.0",
