--- a/micro-services/emails-fetcher/package.json
+++ b/micro-services/emails-fetcher/package.json
@@ -47,6 +47,7 @@
     "pg": "^8.16.3",
     "pg-format": "^1.0.4",
     "poolifier": "^5.1.6",
+    "pst-extractor": "^1.11.0",
     "simple-oauth2": "^5.1.0",
     "winston": "^3.17.0",
     "winston-loki": "^6.1.3",
