--- a/backend/package.json
+++ b/backend/package.json
@@ -44,6 +44,7 @@
     "express": "^4.21.2",
     "express-sse": "^1.0.0",
     "generic-pool": "^3.9.0",
+    "googleapis": "^169.0.0",
     "html-entities": "^2.6.0",
     "imap": "^0.8.19",
     "imapflow": "^1.0.196",
@@ -63,6 +64,7 @@
     "rate-limiter-flexible": "^9.0.0",
     "simple-oauth2": "^5.1.0",
     "stripe": "^17.7.0",
+    "vcard-creator": "^0.7.2",
     "winston": "^3.17.0",
     "winston-loki": "^6.1.3",
     "zod": "^3.25.76",
