--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "email-reply-parser": "^2.0.1",
     "express": "^4.21.2",
     "express-sse": "^1.0.0",
+    "gaxios": "^7.1.3",
     "generic-pool": "^3.9.0",
     "googleapis": "^169.0.0",
     "html-entities": "^2.6.0",
