add quota limiter with conf set from  env vars

--- a/.env.docker
+++ b/.env.docker
@@ -122,3 +122,20 @@ AZURE_CLIENT_ID = your_azure_client_id # ( REQUIRED ) Azure client ID
 AZURE_SECRET = your_azure_client_secret # ( REQUIRED ) Azure secret
 
 
+# ==============| GOOGLE CONTACTS Sync |============= #
+
+# Critical Read Operations (API Limit: 90/min)
+GOOGLE_CONTACTS_CRITICAL_READ_REQUESTS = 80   # ( OPTIONAL ) Number of requests allowed per interval
+GOOGLE_CONTACTS_CRITICAL_READ_INTERVAL = 60   # ( OPTIONAL ) Rate limit interval in seconds
+
+# Critical Write Operations (API Limit: 90/min)
+GOOGLE_CONTACTS_CRITICAL_WRITE_REQUESTS = 80  # ( OPTIONAL ) Number of requests allowed per interval
+GOOGLE_CONTACTS_CRITICAL_WRITE_INTERVAL = 60  # ( OPTIONAL ) Rate limit interval in seconds
+
+# Read Operations - Groups (API Limit: 120/min)
+GOOGLE_CONTACTS_READ_REQUESTS = 110           # ( OPTIONAL ) Number of requests allowed per interval
+GOOGLE_CONTACTS_READ_INTERVAL = 60            # ( OPTIONAL ) Rate limit interval in seconds
+
+# Write Operations - Groups/Delete (API Limit: 90/min)
+GOOGLE_CONTACTS_WRITE_REQUESTS = 80           # ( OPTIONAL ) Number of requests allowed per interval
+GOOGLE_CONTACTS_WRITE_INTERVAL = 60           # ( OPTIONAL ) Rate limit interval in seconds
