--- a/backend/.env.dev
+++ b/backend/.env.dev
@@ -124,3 +124,21 @@ ENRICH_LAYER_API_KEY = test-api-key
 # ==============| THIRD-PARTY - IMAP EMAIL FETCHING SERVICE |============= #
 EMAIL_FETCHING_SERVICE_URL = http://localhost:8084
 EMAIL_FETCHING_SERVICE_API_TOKEN = "test-key"
+
+# ==============| GOOGLE CONTACTS Sync |============= #
+
+# Critical Read Operations (API Limit: 90/min)
+GOOGLE_CONTACTS_CRITICAL_READ_REQUESTS = 80   # ( OPTIONAL ) Number of requests allowed per interval
+GOOGLE_CONTACTS_CRITICAL_READ_INTERVAL = 60   # ( OPTIONAL ) Rate limit interval in seconds
+
+# Critical Write Operations (API Limit: 90/min)
+GOOGLE_CONTACTS_CRITICAL_WRITE_REQUESTS = 80  # ( OPTIONAL ) Number of requests allowed per interval
+GOOGLE_CONTACTS_CRITICAL_WRITE_INTERVAL = 60  # ( OPTIONAL ) Rate limit interval in seconds
+
+# Read Operations - Groups (API Limit: 120/min)
+GOOGLE_CONTACTS_READ_REQUESTS = 110           # ( OPTIONAL ) Number of requests allowed per interval
+GOOGLE_CONTACTS_READ_INTERVAL = 60            # ( OPTIONAL ) Rate limit interval in seconds
+
+# Write Operations - Groups/Delete (API Limit: 90/min)
+GOOGLE_CONTACTS_WRITE_REQUESTS = 80           # ( OPTIONAL ) Number of requests allowed per interval
+GOOGLE_CONTACTS_WRITE_INTERVAL = 60           # ( OPTIONAL ) Rate limit interval in seconds
