--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "@vueuse/nuxt": "^13.9.0",
     "libphonenumber-js": "^1.12.26",
     "posthog-js": "^1.269.1",
-    "read-excel-file": "^6.0.1"
+    "read-excel-file": "^6.0.1",
+    "tus-js-client": "^4.3.1"
   }
 }
