feat: add weekly email report for passive mining

--- a/supabase/functions/mail/deno.json
+++ b/supabase/functions/mail/deno.json
@@ -2,6 +2,7 @@
   "imports": {
     "hono": "https://esm.sh/hono@4.7.4",
     "supabase": "https://esm.sh/@supabase/supabase-js@2",
-    "nodemailer": "npm:nodemailer@^7.0.5"
+    "nodemailer": "npm:nodemailer@^7.0.5",
+    "p-queue": "https://esm.sh/p-queue@9.1.0"
   }
 }
