--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -318,7 +318,7 @@ s3_secret_key = "env(S3_SECRET_KEY)"
 
 [functions.email-campaigns]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/email-campaigns/deno.json"
 # Uncomment to specify a custom file path to the entrypoint.
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
