--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -326,3 +326,14 @@ entrypoint = "./functions/email-campaigns/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/email-campaigns/*.html" ]
+
+[functions.delete-mining-source]
+enabled = true
+verify_jwt = true
+import_map = "./functions/delete-mining-source/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/delete-mining-source/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/delete-mining-source/*.html" ]
