add SERVER_ENDPOINT env to edge functions

--- a/supabase/functions/.env.prod
+++ b/supabase/functions/.env.prod
@@ -10,3 +10,4 @@ SMTP_PASS=
 
 LOGO_URL="https://db.leadminer.io/storage/v1/object/public/templates/LogoWithIcon.png"
 FRONTEND_HOST="https://app.leadminer.io"
+SERVER_ENDPOINT =  http://localhost:8081    # ( REQUIRED ) URL of the Backend server.
