--- a/supabase/functions/.env.dev
+++ b/supabase/functions/.env.dev
@@ -11,3 +11,4 @@ SMTP_PASS=your-secret-smtp-password
 
 LOGO_URL="https://db.leadminer.io/storage/v1/object/public/templates/LogoWithIcon.png"
 FRONTEND_HOST="http://localhost:8082"
+SERVER_ENDPOINT =  http://localhost:8081    # ( REQUIRED ) URL of the Backend server.
